; ModuleID = '/home/carl/AnghaBench/linux/drivers/memstick/host/extr_jmb38x_ms.c_jmb38x_ms_free_host.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/memstick/host/extr_jmb38x_ms.c_jmb38x_ms_free_host.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.memstick_host = type { i32 }
%struct.jmb38x_ms_host = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.memstick_host*)* @jmb38x_ms_free_host to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @jmb38x_ms_free_host(%struct.memstick_host* %0) #0 {
  %2 = alloca %struct.memstick_host*, align 8
  %3 = alloca %struct.jmb38x_ms_host*, align 8
  store %struct.memstick_host* %0, %struct.memstick_host** %2, align 8
  %4 = load %struct.memstick_host*, %struct.memstick_host** %2, align 8
  %5 = call %struct.jmb38x_ms_host* @memstick_priv(%struct.memstick_host* %4)
  store %struct.jmb38x_ms_host* %5, %struct.jmb38x_ms_host** %3, align 8
  %6 = load %struct.jmb38x_ms_host*, %struct.jmb38x_ms_host** %3, align 8
  %7 = getelementptr inbounds %struct.jmb38x_ms_host, %struct.jmb38x_ms_host* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.memstick_host*, %struct.memstick_host** %2, align 8
  %10 = call i32 @free_irq(i32 %8, %struct.memstick_host* %9)
  %11 = load %struct.jmb38x_ms_host*, %struct.jmb38x_ms_host** %3, align 8
  %12 = getelementptr inbounds %struct.jmb38x_ms_host, %struct.jmb38x_ms_host* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @iounmap(i32 %13)
  %15 = load %struct.memstick_host*, %struct.memstick_host** %2, align 8
  %16 = call i32 @memstick_free_host(%struct.memstick_host* %15)
  ret void
}

declare dso_local %struct.jmb38x_ms_host* @memstick_priv(%struct.memstick_host*) #1

declare dso_local i32 @free_irq(i32, %struct.memstick_host*) #1

declare dso_local i32 @iounmap(i32) #1

declare dso_local i32 @memstick_free_host(%struct.memstick_host*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
